# RustGuard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
overleaf/: README.txt  README_OVERLEAF.txt  ndss.cls  rustguard_ndss.tex
paper/: IEEEtran.cls  RustGuard_IEEE_Paper.tex
paper/ndss/: rustguard_ndss_BLIND.tex  rustguard_ndss_full.tex
results/raw/: benchmark_tm4c.txt  benchmark_tm4c_TEMPLATE.txt  benchmark_x86_64.txt
rustguard-core/: Cargo.toml
rustguard-core/src/: lib.rs  tests.rs
rustguard-hal/: Cargo.toml  memory.x
rustguard-hal-tiva/: Cargo.toml  build.rs  memory.x
rustguard-hal-tiva/.cargo/: config.toml
rustguard-hal-tiva/src/: main.rs
rustguard-hal/.cargo/: config.toml
rustguard-hal/src/: main.rs
rustguard-pap/: Cargo.toml
rustguard-pap/src/: lib.rs
rustguard-pap/tests/: integration.rs  validation.rs
scripts/: generate_figures.py  parse_hw_results.py  push_to_github.sh  run_benchmarks.sh
