[package]
name        = "rustguard-hal-tiva"
version     = "0.1.0"
edition     = "2021"
description = "RustGuard benchmark firmware for TM4C123GH6PM (Tiva C LaunchPad, Cortex-M4F @ 16 MHz default clock)"

# This crate is NOT part of the workspace (embedded target only).
# Build separately:
#   rustup target add thumbv7em-none-eabihf
#   cargo build --release --target thumbv7em-none-eabihf
#   rust-objcopy -O binary target/thumbv7em-none-eabihf/release/rustguard-hal-tiva out.bin
#
# Flash with LM Flash Programmer (GUI or CLI):
#   LMFlash.exe -i ICDI -v -r out.bin
#
# Confirmed working on physical board: LED cycles Red->Blue->Green on completion.
# Serial output on virtual COM port at 9600 baud, 8N1.

[[bin]]
name = "rustguard-hal-tiva"
path = "src/main.rs"

[dependencies]
rustguard-core = { path = "../rustguard-core" }
rustguard-pap  = { path = "../rustguard-pap"  }
cortex-m       = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt    = { version = "0.7.3" }
panic-halt     = { version = "0.2.0" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
debug         = true

[workspace]
