[package]
name = "rustguard-hal"
version = "0.1.0"
edition = "2021"
description = "RustGuard firmware for STM32L476 (Cortex-M4) — requires physical board to run"

# NOTE: this crate is NOT part of the workspace to avoid breaking
# `cargo test` on x86 hosts (cortex-m crates only compile for embedded targets).
# Build it directly:
#   cargo check --target thumbv7em-none-eabihf

[[bin]]
name = "rustguard-hal"
path = "src/main.rs"

[dependencies]
rustguard-pap  = { path = "../rustguard-pap" }
cortex-m       = "0.7.7"
cortex-m-rt    = "0.7.3"
stm32l4xx-hal  = { version = "0.7.1", features = ["stm32l476", "rt"] }
panic-halt     = "0.2.0"
