[package]
name = "rustguard-pap"
version = "0.1.0"
edition = "2021"
description = "RustGuard Packet Authentication Protocol"

[dependencies]
rustguard-core = { path = "../rustguard-core" }
heapless        = { version = "0.8.0", default-features = false }

[dev-dependencies]
rustguard-core = { path = "../rustguard-core" }
